Mon Feb 16 01:45:59 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Update.

Mon Feb 16 00:49:47 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): If we have preconv, it's silly to
	  recode to the assumed page encoding and risk problems with
	  characters unrepresentable in that encoding; we might as well just
	  recode to UTF-8 and feed that to preconv.

Mon Feb 16 00:39:22 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): Append //TRANSLIT to iconv -t
	  argument (specifically, so that hyphens get properly
	  transliterated when using preconv and groff -Tutf8 in a non-UTF-8
	  locale; thanks, Matthew Burgess and Alexander Patrakov).

Mon Feb 16 00:20:07 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Check for gpreconv/preconv, which is evidence of a
	  version of groff supporting Unicode input, and therefore good
	  enough to assume --enable-mb-groff (thanks, Matthew Burgess).

Sun Feb 15 23:48:51 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (compare_candidates): Remove obsolete first-pass
	  language code comparison. Language codes are already handled by
	  later code here, and this comparison caused English pages to be
	  preferred over pages for languages whose names sort later than
	  "man".

Thu Feb 12 11:23:19 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/manconv_main.c (main): Correct error message if the given
	  filename cannot be opened.

Wed Feb  4 13:53:47 CET 2009  Yuri Kozlov  <yuray@komyakino.ru>

	* man/po4a/po/ru.po: Update from Translation Project (trivial).

Sun Feb  1 16:40:16 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Directory layout): Mention gnulib.

Sun Feb  1 16:36:01 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* lib/linelength.c (get_line_length): Use line length from standard
	  input, but only if standard output is not a terminal; this allows