@@ -1,3 +1,8 @@
+Tue Feb 17 00:49:28 GMT 2009  Colin Watson  <cjwatson@debian.org>
+
+	* configure.ac: Check for gpreconv/preconv properly, i.e. by using
+	  AC_CHECK_PROGS rather than by using 'which'.
+
 Mon Feb 16 01:45:59 GMT 2009  Colin Watson  <cjwatson@debian.org>
 
 	* docs/NEWS: Update.
